Enhance GEMINI_METADATA_FIELDS.md and PROJECT_STATUS.md for v2.0.0 updates
- Updated GEMINI_METADATA_FIELDS.md to reflect the enhanced schema structure, detailing the new `extracted_value`, `match_flag`, and `validation` attributes for each field.
- Added comprehensive field-specific instructions, including metadata for `mandatory_field`, `negotiable`, and `expected_position`, to improve clarity for users.
- Revised PROJECT_STATUS.md to indicate the latest updates, including the completion of template references and field metadata for all 22 fields.
- Documented the explicit guidance for negotiable fields, emphasizing the distinction between structural and value similarity in match flags.
- Aimed at providing thorough documentation and status updates to enhance usability and understanding of the MSA Metadata Extractor's capabilities.

--- a/docs/V2.0.0_FEATURES.md
+++ b/docs/V2.0.0_FEATURES.md
@@ -74,11 +74,40 @@ Version 2.0.0 introduces major enhancements to the MSA Metadata Extractor, focus
 - Support for template clause references
 - Sample answers from templates
 - Template-based extraction guidance
+- All 22 fields now have complete template references (clause excerpts, sample answers, clause names)
 
 **Benefits:**
 - Consistent extraction against standards
 - Better match flag accuracy
 - Template compliance tracking
+- Complete template coverage for all fields
+
+### 6. Field Metadata
+
+**What Changed:**
+- Added field metadata to `FIELD_INSTRUCTIONS`:
+  - `mandatory_field`: Whether field is mandatory (yes/no)
+  - `negotiable`: Whether field is negotiable (yes/no)
+  - `expected_position`: Expected/standard position for non-negotiable fields
+- All 22 fields populated with metadata
+- Metadata used for LLM context (not part of response schema)
+
+**Benefits:**
+- Better extraction guidance for LLM
+- Clear distinction between negotiable and non-negotiable fields
+- Template compliance understanding
+
+### 7. Negotiable Fields Guidance
+
+**What Changed:**
+- Explicit prompt guidance for negotiable fields
+- Match flags reflect structural similarity, not value similarity for negotiable fields
+- Clear distinction between negotiable and non-negotiable field handling
+
+**Benefits:**
+- Accurate match flag assignment for negotiable fields
+- Better understanding of template compliance vs. value differences
+- More meaningful quality assessment
 
 ## Breaking Changes
 
@@ -130,6 +159,8 @@ See [Architecture Decision Records](architecture/adr/README.md) for complete lis
 - [ADR-0001: Enhanced Schema Structure](architecture/adr/0001-enhanced-schema-structure.md)
 - [ADR-0002: Config Refactoring](architecture/adr/0002-config-refactoring-separation-of-concerns.md)
 - [ADR-0003: Integrated Validation](architecture/adr/0003-integrated-validation-vs-separate-service.md)
+- [ADR-0012: Negotiable Fields Guidance](architecture/adr/0012-negotiable-fields-guidance.md)
+- [ADR-0013: Template References Approach](architecture/adr/0013-template-references-approach.md)
 
 **Historical Decisions (for reference):**
 - [ADR-0004: Two-Tier Extraction Architecture](architecture/adr/0004-two-tier-extraction-architecture.md)
